--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 
 .main{
    height: 100%;
-   width: 450px;
+   width: 33.01%;
    background-color: white;
    border-right: 2px solid rgb(211, 200, 200);
    border-bottom: 2px solid rgb(211, 199, 199) ;
