--- a/style.css
+++ b/style.css
@@ -73,4 +73,10 @@ body{
     margin-bottom: 0;
  }
 
+ .btn-secondary:hover{
+    color: $hover-color;
+    @include gradient-bg($hover-background);
+    border-color: $hover-border;
+ }
+
  
